[package]
name = "view"
version = "0.1.0"
edition = "2024"

[dependencies]
viuer = { version = "0.9", features = ["print-file"] }
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
rstest = "0.25"
